syntax = "proto3";

package helloworld;
//option go_package = "app/services;helloworld";

service Greetee {
    rpc SayHello (HelloRequest) returns (HelloReply) {
    }
}

message HelloRequest {
    string name = 1;
}

message HelloReply {
    string message = 1;
}